more alignment fixes

--- a/main.css
+++ b/main.css
@@ -108,22 +108,24 @@ ul {
     border-bottom-right-radius: 8px;
 }
 #api-row {
-    width: 1050px;
     margin-top: 30px;
 }
-#api-row:first-child {
-    margin-left: 25px;
+#news {
+    margin-right: 16px;
 }
 
-#api-row:last-child {
-    margin-right: 25px;
+#map {
+    margin-left: 16px;
+}
+
+#special {
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .api-panel {
 	display: inline-block;
 	width: 29%;
-	margin-right: 2%;
-	margin-bottom: 20px;
 	height: 240px;
 	background: white;
 	float: left;
@@ -251,8 +253,8 @@ iframe {
     margin: auto 0;
 }
 #lower-body {
-	width: 1020px;
 	display: inline-block;
+    margin-top: 30px;
 }
 #left-full-panel {
     width: 65%;
@@ -264,7 +266,7 @@ iframe {
 #right-full-panel{
 	width: 25%;
 	background: white;
-	border: 3px solid #b90f0f;
+	border: 5px solid #b90f0f;
 	border-radius: 5px;
 	margin: 0 auto;
 	padding: 0;
